Set icon colors and align sidebar items correctly

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import 'node_modules/modern-normalize/modern-normalize.css';
 
+svg {
+  fill: white; 
+}
+
 .main-container {
   display: grid;
   grid-template-columns: 1fr 4fr;
@@ -13,8 +17,31 @@
   padding: 30px;
 }
 
+.logo {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  align-items: center;
+  font-size: 20px;
+  gap: 20px;
+}
+
+.logo-img {
+  width: 50px;
+}
+
+.sidebar-buttons {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  align-items: center;
+}
+.sidebar-icons {
+  margin: 10px;
+  width: 20px;
+}
+
 .sidebar > ul {
   list-style-type: none;
+  color: #fff;
 }
 
 .header {
@@ -40,6 +67,7 @@
 
 .alert-icon {
   grid-column: 8 / 9;
+  width: 30px;
 }
 
 .user-icon {
